welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:16: error: illegal character '\u202f'
 for(nbpas<-8){
^